--- a/index.html
+++ b/index.html
@@ -2,25 +2,21 @@
 <html>
 <head>
   <title>kθπ.tech</title>
+  <link rel="icon" type="image/ico" href="favicon.ico"/>
   <style type="text/css">
     body {
       margin: 0;
       padding: 0;
       text-align: center;
-      /*font-style: Arial;*/
     }
-
     .h1 {
       font-size: 60px;
       padding-bottom: 0;
       margin-bottom: 0;
     }
-
     .p1 {
       font-size: 12px;
     }
-
-
   </style>
 </head>
 <body>
@@ -40,6 +36,7 @@
 </p>
 </div>
 <div>
+  <!-- HELLO KTP WEB DEV. TO MAKE CHANGES TO THIS LIST PLEASE SUBMIT A PULL REQUEST TO https://github.com/domparise/ktp_dot_tech -->
   <h3>Directory of Chapters</h3>
   <a target="_blank" href="https://kappathetapi.com/">University of Michigan</a><br>
   <a target="_blank" href="https://www.pittkappathetapi.com/">University of Pittsburgh</a><br>
