added UNC and constitution template

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <br>
   <p class="p1">Members of this brotherhood spread their love of technology through community education events, internal tech discussions, professional development events, and by fraternizing amongst themselves.</p>
   <p class="p1">Bonded by an interdisciplinary and multicultural love of technology these initiated brothers and sisters transcend by forming a higher order where one is defined by their passion for technology and driven by the pursuit of knowledge.</p>
+  <a class="p1" href="./Kappa_Theta_Pi_Constitution.html">learn more</a>
 </p>
 </div>
 <div>
@@ -42,6 +43,7 @@
   <a target="_blank" href="https://www.pittkappathetapi.com/">University of Pittsburgh</a><br>
   <a target="_blank" href="https://www.ktpcuse.com/">Syracuse University</a><br>
   <a target="_blank" href="https://ktpumd.com/">University of Maryland</a><br>
+  <a target="_blank" href="https://ktp.cs.unc.edu/">University of North Carolina</a><br>
   <a target="_blank" href="http://tcnjktp.com/">The College of New Jersey</a>
 </div>
 </body>
