--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div>
   <!-- HELLO KTP WEB DEV. TO MAKE CHANGES TO THIS LIST PLEASE SUBMIT A PULL REQUEST TO https://github.com/domparise/ktp_dot_tech -->
   <h3>Directory of Chapters</h3>
-  <a target="_blank" href="https://kappathetapi.com/">University of Michigan</a><br>
+  <a target="_blank" href="http://kappathetapi.com/">University of Michigan</a><br>
   <a target="_blank" href="https://www.pittkappathetapi.com/">University of Pittsburgh</a><br>
   <a target="_blank" href="https://www.ktpcuse.com/">Syracuse University</a><br>
   <a target="_blank" href="https://ktpumd.com/">University of Maryland</a><br>
